tests/error/misc_errors/conditional_global_shadow1.err
Error: Different types (at $FILE:14:11)
   | 
12 |     if b:
13 |         x = 4
14 |     return x
   |            ^ Variable `x` may refer to different types
   | 
13 |         x = 4
   |         - This is of type `int`

Note: Variable `x` may be shadowing a global function definition of type `() ->
None` on some branches

Guppy compilation failed due to 1 previous error
